# r3d

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/workflows/: cmake-multi-platform.yml
cmake/: EmbedAssets.cmake  EmbedShaders.cmake  mingw-w32-x86_64.cmake  mingw-w64-x86_64.cmake  r3dConfig.cmake.in
docs/shaders/: screen_shader.md  surface_shader.md
examples/: CMakeLists.txt  basic.cpp  dof.c  kinematics.c  probe.c  shader.c  transparency.c
include/r3d/: r3d.h  r3d_animation.h  r3d_animation_player.h  r3d_core.h  r3d_cubemap.h  r3d_draw.h  r3d_environment.h  r3d_instance.h  r3d_material.h  r3d_mesh.h  r3d_mesh_data.h  r3d_screen_shader.h  r3d_surface_shader.h  r3d_utils.h
scripts/: bin2c.py  glsl_processor.py
shaders/deferred/: ambient.frag  compose.frag  lighting.frag
shaders/generic/: color.frag  cubemap.vert  screen.vert
shaders/include/: math.glsl  pbr.glsl
shaders/post/: bloom.frag  dof.frag  fog.frag  fxaa.frag  output.frag  screen.frag  visualizer.frag
shaders/prepare/: atrous_wavelet.frag  bicubic_up.frag  bloom_down.frag  bloom_up.frag  blur_down.frag  blur_up.frag  cubemap_from_equirectangular.frag  cubemap_irradiance.frag  dof_blur.frag  (+12 more)
src/: r3d_ambient_map.c  r3d_animation.c  r3d_animation_player.c  r3d_config.h.in  r3d_core.c  r3d_core_state.h  r3d_cubemap.c  r3d_decal.c  r3d_draw.c  r3d_environment.c  r3d_importer.c  r3d_instance.c  r3d_kinematics.c  r3d_lighting.c  r3d_material.c  r3d_mesh.c  r3d_mesh_data.c  r3d_model.c  r3d_probe.c  r3d_screen_shader.c  r3d_skeleton.c  r3d_surface_shader.c  r3d_utils.c  r3d_visibility.c
(+47 files in other folders)
